[B]2.7.4[/B]
- fixed missing colon from initial 2.7.3 upload
- fixed group selection

[B]2.7.3[/B]
- fixed httplib call in python3

[B]2.7.2[/B]
- fixed transcoding API calls

[B]2.7.1[/B]
- did not update datetime function for v4 connections
- improve hostname handling

[B]2.7.0[/B]
- most knewc python functions work with new api
UI Client
- prev key broken
- need to send certain key to get UI back when OSD is disabled.


[B]2.6.6[/B]
- fix ident

[B]2.6.5[/B]
- new startup spinner during initial connection
- additional fix for utf encoded filename in web client
- eliminate unnecessary resume point save in web client

[B]2.6.4[/B]
- fix utf encoded filename in web client

[B]2.6.3[/B]
- fix some int conversions lost on old_div

[B]2.6.2[/B]
- fix uname print
- fix basestring past from futurize

[B]2.6.1[/B]
- remove past old_div function from futurize

[B]2.6.0[/B]
- New name knew4v5
- support python3 for Kodi v19 and python2
- initial support for web client for NextPVR v5
- Removed NEWA on NextPVR v5
- added tempo control for Kodi v18

[B]2.5.4[/B]
- Error logging certain characters in web client
- Updated web client skins for Classic and Confluence skins
- Minor error in text colour for status in native details popup
- Fixed Busy notification after v18 dialog change

[B]2.5.3[/B]
- Fix for misnamed VLC function

[B]2.5.3rc1[/B]
- Cosmetic change Classic skin
- auto discovery of NextPVR
- fix for millseconds in NPVR.db3

[B]2.5.3b1[/B]
- Fixed recording list for NextPVR 4.04
- Fixes for IPv6 hostname
- Fixes for remote timeout recovery

Web Client

- Configure context menu key
  - context stop in Video Playback
  - context popup or exit web client
- F12 exit
- toggle subtitles key
- more MCE keys
- support plugin URLs passed from NextPVR


[B]2.5.2[/B]
- change to web client busy dialog (for Isengard)
- changed startup logic from 2.5.1

[B]2.5.1[/B]
Release

[B]2.5.1 RC3[/B]
- Change to startup logic to pass higher res default to NextPVR

[B]2.5.1 RC2[/B]