@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.kodi.knewc" name="NextPVR New Client" version="2.7.4" provider-name="emveepee">
-    <requires>                                               1
+<addon id="script.kodi.knewc" name="NextPVR New Client" version="2.8.0~a1" provider-name="emveepee">
+    <requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.module.future" version="0.16.0.4"/>
         <import addon="script.module.dateutil" version="2.7.3"/>
